--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -29,7 +29,7 @@
             Revenue-focused outreach that keeps your sales pipeline growing.
           </p>
         </div>
-        <a class="btn btn-primary footer-callout__cta" href="#">Get a quote</a>
+        <a class="btn btn-primary footer-callout__cta" href="./contact.html#book-a-call">Talk to an expert</a>
       </div>
     </div>
     <div class="container footer-main">
