--- a/docs/partials/header.html
+++ b/docs/partials/header.html
@@ -39,7 +39,7 @@
         <a href="./industries.html" data-root-href="industries.html">Industries</a>
         <a href="./case-studies.html" data-root-href="case-studies.html">Case studies</a>
         <a href="./about.html" data-root-href="about.html">About</a>
-        <a class="btn btn-primary" href="./contact.html#book-a-call" data-root-href="contact.html#book-a-call">Book a call</a>
+        <a class="btn btn-primary" href="./contact.html#book-a-call" data-root-href="contact.html#book-a-call">Talk to an expert</a>
       </nav>
     </nav>
   </div>
