--- a/docs/partials/header.html
+++ b/docs/partials/header.html
@@ -19,6 +19,8 @@
               alt="Direct Sales Network logo"
               loading="eager"
               decoding="async"
+              width="160"
+              height="48"
             />
           </picture>
         </span>
